Making the first steps to the front-end

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,30 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
+:root {
+  --primary-color: #5c4f79;
+}
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  font-family: "Montserrat", sans-serif, Arial, Helvetica;
+  text-decoration: none;
+}
+
+img {
+  display: block;
+  width: 100%;
+}
+
+button {
+  border: none;
+  cursor: pointer;
+}
+
+.content-container {
+  padding: 80px 2rem;
+  max-width: 1200px;
+  margin: 0 auto;
+}
