--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,35 +1,1 @@
-header {
-  width: 100%;
-  background-color: var(--primary-color);
-  position: fixed;
-
-  div {
-    max-width: 1200px;
-    padding: 0 1rem;
-    margin: 0 auto;
-    height: 60px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    color: white;
-
-    h1 {
-      font-size: 1.6rem;
-    }
-  }
-
-  nav {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-    button {
-      padding: 0.325rem 0.5rem;
-      border-radius: 0.125rem;
-      color: var(--primary-color);
-      background: white;
-      font-weight: bold;
-      font-size: 0.8rem;
-    }
-  }
-}
+//
