--- a/src/app/modules/person/pages/list-person/list-person.component.scss
+++ b/src/app/modules/person/pages/list-person/list-person.component.scss
@@ -1,21 +1,8 @@
-.image-container {
-  width: 200px;
-  height: 200px;
+th {
+  text-align: start;
+  padding: 0.5rem;
 }
 
-img {
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: cover; /* Ajusta a imagem para preencher o contêiner */
-}
-
-ul {
-  display: flex;
-  gap: 20px;
-}
-
-li {
-  border-radius: 20px;
-  padding: 0.2rem;
-  display: flex;
+td {
+  padding: 0.5rem;
 }
