--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,9 +1,19 @@
 <header>
-  <div>
-    <h1>Gerênciamento de pessoas</h1>
-    <nav>
-      <button routerLink="/">People</button>
-      <button routerLink="/new-person">New Person</button>
+  <div class="container flex flex-row justify-between mx-auto p-4">
+    <h1 class="text-2xl font-bold">Gerênciamento de pessoas</h1>
+    <nav class="flex gap-5">
+      <button
+        class="bg-purple-500 text-white py-1 px-4 rounded-md text-base"
+        routerLink="/"
+      >
+        People
+      </button>
+      <button
+        class="bg-purple-500 text-white py-1 px-4 rounded-md text-base"
+        routerLink="/new-person"
+      >
+        New Person
+      </button>
     </nav>
   </div>
 </header>
