--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,26 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
   --primary-color: #5c4f79;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  font-family: "Montserrat", sans-serif, Arial, Helvetica;
-  text-decoration: none;
-}
-
-img {
-  display: block;
-  width: 100%;
-}
-
-button {
-  border: none;
-  cursor: pointer;
 }
 
 .content-container {
