Creating the features to Create

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -10,7 +10,7 @@
       </button>
       <button
         class="bg-purple-500 text-white py-1 px-4 rounded-md text-base"
-        routerLink="/new-person"
+        (click)="openModal()"
       >
         New Person
       </button>
