--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,16 @@
   max-width: 1200px;
   margin: 0 auto;
 }
+
+.modal {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.6);
+}
