--- a/src/app/shared/input-custom/input-custom.component.scss
+++ b/src/app/shared/input-custom/input-custom.component.scss
@@ -5,7 +5,7 @@
 
 input {
   font-size: 16px;
-  padding: 10px 10px 10px 5px;
+  padding: 10px 10px 5px 5px;
   display: block;
   width: 200px;
   border: none;
@@ -16,7 +16,6 @@ input {
 
 input:focus {
   outline: none;
-  border: none;
 }
 
 label {
@@ -39,38 +38,6 @@ input:valid ~ label {
   color: #5264ae;
 }
 
-.bar {
-  position: relative;
-  display: block;
-  width: 100%;
-}
-
-.bar:before,
-.bar:after {
-  content: "";
-  height: 2px;
-  width: 0;
-  bottom: 1px;
-  position: absolute;
-  background: #5264ae;
-  transition: 0.2s ease all;
-  -moz-transition: 0.2s ease all;
-  -webkit-transition: 0.2s ease all;
-}
-
-.bar:before {
-  left: 50%;
-}
-
-.bar:after {
-  right: 50%;
-}
-
-input:focus ~ .bar:before,
-input:focus ~ .bar:after {
-  width: 50%;
-}
-
 .highlight {
   position: absolute;
   height: 60%;
@@ -83,6 +50,14 @@ input:focus ~ .bar:after {
 
 input:focus ~ .highlight {
   animation: inputHighlighter 0.3s ease;
+}
+
+.input-error {
+  border-bottom: 1px solid red;
+}
+
+.input-success {
+  border-bottom: 1px solid green;
 }
 
 @keyframes inputHighlighter {
