Componentização e mais detalhes do formulário

--- a/src/app/modules/person/pages/list-person/list-person.component.html
+++ b/src/app/modules/person/pages/list-person/list-person.component.html
@@ -10,157 +10,8 @@
   </button>
 </main>
 
-<app-modal modalId="create-modal" modalTitle="Criar uma nova pessoa">
-  <form
-    class="space-y-1"
-    [formGroup]="personController.personForm"
-    (ngSubmit)="onSubmit()"
-  >
-    <div class="flex md:flex-row max-sm:flex-col gap-2">
-      <div class="flex-1">
-        <app-custom-input
-          id="firstName"
-          label="Nome"
-          formControlName="firstName"
-          placeHolder="Seu primeiro nome"
-          [form]="personController.personForm"
-        />
-      </div>
-
-      <div class="flex-1">
-        <app-custom-input
-          id="lastName"
-          label="Sobrenome"
-          formControlName="lastName"
-          placeHolder="Seu sobrenome aqui"
-          [form]="personController.personForm"
-        />
-      </div>
-    </div>
-    <div class="flex md:flex-row max-sm:flex-col gap-2">
-      <div class="flex-1">
-        <app-custom-input
-          id="document"
-          label="Documento"
-          mask="000.000.000-00"
-          formControlName="document"
-          placeHolder="Texto aqui"
-          [form]="personController.personForm"
-        />
-      </div>
-      <div class="flex-1">
-        <app-custom-input
-          id="phoneNumber"
-          inputType="tel"
-          label="Celular"
-          mask="(00) 00000-0000"
-          [useMask]="false"
-          formControlName="phoneNumber"
-          placeHolder="Celular"
-          [form]="personController.personForm"
-        />
-      </div>
-    </div>
-    <div class="flex md:flex-row max-sm:flex-col gap-2">
-      <div class="flex-1">
-        <app-custom-input
-          inputType="email"
-          id="email"
-          label="E-mail"
-          formControlName="email"
-          placeHolder="E-mail"
-          [form]="personController.personForm"
-        />
-      </div>
-      <div class="flex-1">
-        <app-custom-input
-          id="dateOfBirth"
-          label="Data de nascimento"
-          formControlName="dateOfBirth"
-          mask="00/00/0000"
-          [useMask]="false"
-          placeHolder="Data de nascimento"
-          [form]="personController.personForm"
-        />
-      </div>
-    </div>
-    <div class="flex flex-row items-end gap-2">
-      <div class="flex-1">
-        <app-custom-input
-          id="zipcode"
-          label="CEP"
-          formControlName="zipcode"
-          mask="00000-000"
-          placeHolder="CEP"
-          [form]="personController.personForm"
-        />
-      </div>
-      <app-primary-button
-        title="Buscar"
-        inputType="button"
-        [isLoading]="cepLoading"
-        (onTap)="getCep()"
-        height="h-11"
-      />
-    </div>
-    <app-custom-input
-      id="street"
-      label="Rua"
-      formControlName="street"
-      placeHolder="Rua"
-      [form]="personController.personForm"
-    />
-    <div class="flex md:flex-row max-sm:flex-col gap-2">
-      <div class="max-2xl:w-20 max-sm:w-auto">
-        <app-custom-input
-          id="number"
-          label="Nº"
-          formControlName="number"
-          placeHolder="Número"
-          [form]="personController.personForm"
-        />
-      </div>
-      <div class="flex-1">
-        <app-custom-input
-          id="extraLine"
-          label="Complemento"
-          formControlName="extraLine"
-          placeHolder="Complemento da residência (opcional)"
-          [form]="personController.personForm"
-        />
-      </div>
-    </div>
-    <app-custom-input
-      id="neighborhood"
-      label="Bairro"
-      formControlName="neighborhood"
-      placeHolder="Bairro"
-      [form]="personController.personForm"
-    />
-    <div class="flex md:flex-row max-sm:flex-col gap-2">
-      <div class="max-2xl:w-20 max-sm:w-auto">
-        <app-custom-input
-          id="state"
-          label="Estado"
-          formControlName="state"
-          placeHolder="UF"
-          [form]="personController.personForm"
-        />
-      </div>
-      <div class="flex-1">
-        <app-custom-input
-          id="city"
-          label="Cidade"
-          formControlName="city"
-          placeHolder="Cidade"
-          [form]="personController.personForm"
-        />
-      </div>
-    </div>
-    <div class="h-4"></div>
-    <app-primary-button
-      title="Criar"
-      inputType="submit"
-      [isLoading]="createLoading"
-    /></form
-></app-modal>
+<app-person-modal
+  modalId="create-modal"
+  modalTitle="Criar uma nova pessoa"
+  (submitEvent)="onSubmit()"
+></app-person-modal>
