--- a/src/app/modules/person/pages/list-person/list-person.component.html
+++ b/src/app/modules/person/pages/list-person/list-person.component.html
@@ -1,17 +1,84 @@
-<main class="container mx-auto px-4 pt-3">
-  <button
-    data-modal-target="create-modal"
-    data-modal-toggle="create-modal"
-    class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-    type="button"
-    (click)="clearForm()"
-  >
-    Adicionar
-  </button>
+<main class="container mx-auto p-4">
+  <h1 class="font-bold text-3xl text-slate-800">Gerênciamento de Pessoas</h1>
+  <div class="mt-4">
+    <div class="flex flex-row justify-between items-center mb-4">
+      <h2 class="font-bold text-xl text-slate-800 overflow-clip">
+        Listagem de pessoas
+      </h2>
+      <button
+        data-modal-target="create-modal"
+        data-modal-toggle="create-modal"
+        [ngClass]="classes.btnPrimaryClasses()"
+        (click)="clearForm()"
+        type="button"
+      >
+        Adicionar
+      </button>
+    </div>
+
+    <ul class="grid lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-1 gap-2">
+      <li
+        *ngFor="let person of controller.listPerson"
+        class="relative rounded-lg p-3 border-gray-300 border hover:border-blue-400 hover:shadow-md shadow-cyan-200 hover:cursor-pointer"
+      >
+        <div class="absolute right-1 top-1">
+          <div class="flex flex-col gap-1">
+            <button
+              class="border border-gray-100 rounded-md hover:border-blue-200"
+              data-modal-target="edit-modal"
+              data-modal-toggle="edit-modal"
+              (click)="onEdit(person)"
+              type="button"
+            >
+              <img src="../../../../assets/icons/edit.svg" alt="Editar icone" />
+            </button>
+            <button
+              class="border border-gray-100 rounded-md hover:border-blue-200"
+            >
+              <img
+                src="../../../../assets/icons/remove.svg"
+                alt="Remover icone"
+              />
+            </button>
+          </div>
+        </div>
+
+        <div class="flex flex-col gap-2">
+          <img
+            class="w-20 h-20 self-center"
+            src="{{ person.photoUrl }}"
+            alt="{{ person.lastName + ' picture' }}"
+          />
+          <h3 class="font-bold text-md self-center text-center">
+            {{ person.firstName + " " + person.lastName }}
+          </h3>
+          <div>
+            <div class="group">
+              <span class="text-xs font-extralight">Documento</span>
+              <p class="font-medium text-sm">
+                {{ utils.addFormatCPF(person.document) }}
+              </p>
+            </div>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
 </main>
 
 <app-person-modal
   modalId="create-modal"
   modalTitle="Criar uma nova pessoa"
-  (submitEvent)="onSubmit()"
+  buttonSubmitTitle="Criar registro"
+  (submitEvent)="onCreate()"
+  [buttonSubmitLoading]="controller.createLoading"
+></app-person-modal>
+
+<app-person-modal
+  modalId="edit-modal"
+  modalTitle="Atualizar registro da pessoal"
+  [disableDocument]="true"
+  (submitEvent)="onUpdate()"
+  [buttonSubmitLoading]="controller.updateLoading"
+  buttonSubmitTitle="Atualizar registro"
 ></app-person-modal>
